Updated alot of UI related stuff

--- a/BetBros.Server/Components/MainLayout.razor
+++ b/BetBros.Server/Components/MainLayout.razor
@@ -41,7 +41,7 @@
     </AuthorizeView>
 
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+        <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4" Style="padding-bottom: 120px;">
             @Body
         </MudContainer>
     </MudMainContent>
